syntax = "proto3";

package common;
option go_package = "github.com/jalexanderII/zero_fintech/gen/Go/common";


// Status message for Delete database action
enum DELETE_STATUS {
  DELETE_STATUS_UNKNOWN = 0;
  DELETE_STATUS_PENDING = 1;
  DELETE_STATUS_IN_PROGRESS = 2;
  DELETE_STATUS_SUCCESS = 3;
  DELETE_STATUS_FAILED = 4;
}

// Different optimization plans that a PaymentPlan may prioritize
enum PlanType {
  PLAN_TYPE_UNKNOWN = 0;
  PLAN_TYPE_OPTIM_CREDIT_SCORE = 1;
  PLAN_TYPE_MIN_FEES = 2;
}

// Payment frequency for a PaymentPlan
enum PaymentFrequency {
  PAYMENT_FREQUENCY_UNKNOWN = 0;
  PAYMENT_FREQUENCY_WEEKLY = 1;
  PAYMENT_FREQUENCY_BIWEEKLY = 2;
  PAYMENT_FREQUENCY_MONTHLY = 3;
  PAYMENT_FREQUENCY_QUARTERLY = 4;
}

enum PaymentStatus {
  PAYMENT_STATUS_UNKNOWN = 0;
  // Payment plan is in good standing and all payments are current
  PAYMENT_STATUS_CURRENT = 1;
  // This plan is fully paid
  PAYMENT_STATUS_COMPLETED = 2;
  // The user has requested this payment to be cancelled
  PAYMENT_STATUS_CANCELLED = 3;
  // The payment plan is not current because the user has missed a payment and still have not paid it
  PAYMENT_STATUS_IN_DEFAULT = 4;
}

enum PaymentActionStatus {
  PAYMENT_ACTION_STATUS_UNKNOWN = 0;
  // Payment is pending
  PAYMENT_ACTION_STATUS_PENDING = 1;
  // payment is completed
  PAYMENT_ACTION_STATUS_COMPLETED = 2;
  // payment defaulted
  PAYMENT_ACTION_STATUS_IN_DEFAULT = 3;
}

message LinkRequest {}

message LinkResponse {
  string LinkToken =1;
}