syntax = "proto3";

package core;
option go_package = "./proto;core";

import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";
import "common.proto";

message Transaction {
  string transaction_id = 1;
  string user_id = 2;
  // Account Id this transaction is associated with
  int32 account_id = 3;
  // Name of the charging entity
  string name = 4;
  // Total amount in dollars of the transaction
  double amount = 5;
  // Date the transaction was recognized by the account
  google.protobuf.Timestamp date = 6;
  // Number of points this transaction earned the user for a specific account
  int32 rewards_earned = 7;
  TransactionDetails transaction_details = 8;
}

message TransactionDetails {
  // Full address of the charging entity
  string address = 1;
  // Business name of the charging entity
  string doing_business_as = 2;
  // Date the transaction was processed by the charger
  google.protobuf.Timestamp date_processed = 3;
}

// CRUD Methods
message CreateTransactionRequest {
  Transaction transaction = 1;
}

message GetTransactionRequest {
  string id = 1;
}

message UpdateTransactionRequest {
  string id = 1;
  Transaction transaction = 2;
  google.protobuf.FieldMask mask = 3;
}

message DeleteTransactionRequest {
  string id = 1;
}

message ListTransactionRequest {}

message ListTransactionResponse {
  repeated Transaction transactions = 1;
}

message DeleteTransactionResponse {
  DELETE_STATUS status = 1;
  Transaction transaction = 2;
}